--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Favicon Demo</title>
     <!-- Link to the animated favicon -->
-    <link rel="icon" type="image/gif" href="faviconx.gif">
+    <link rel="icon" type="image/gif" href="favicon.gif">
 </head>
 <body>
     <h1>Animated Favicon Test</h1>
