--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Anything Boes Chat</title>
-
+  <title>Anything Boes </title>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon.png" /> <!-- Primary static favicon -->
   <link rel="icon" type="image/gif" href="/favicon.gif" /> <!-- Fallback for browsers supporting animated GIFs -->
